# cro-rundown-sdk

./: .gitignore  LICENSE  README.md  docker-compose.yml  setup.cfg  setup.py
.github/workflows/: main.yml
data/: .keep
data/source/2022/W99/: RUNDOWN_2022--_10-13_N_Plus.xml
docs/: NOTES.md
scripts/: batch-cleanse.cmd  batch-extract.cmd  batch.cmd
src/cro/rundown/: __init__.py  __main__.py  _clean.py  _domain.py  _parse.py
src/cro/rundown/sdk/: __init__.py  __main__.py  _arrange.py  _clean.py  _cleanse.py  _domain.py  _extract.py  _message.py  _parse.py  _shared.py  _sort.py  helpers.py
src/cro/rundown/sdk/_archive/: __init__.py
src/cro/rundown/sdk/_arrange/: __init__.py  __main__.py
src/cro/rundown/sdk/_cleanse/: __init__.py  __main__.py
src/cro/rundown/sdk/_extract/: __init__.py  __main__.py
tests/: test_domain.py  test_package.py  test_program.py  test_service.py
tests/data/: rundown.xml
