[metadata]
name = cro.rundown.sdk
version = attr: cro.rundown.sdk.__version__
author = Czech Radio
author_email = david.landa@rozhlas.cz
description = Python library to work with iRozhlas rundown REST service.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/czech-radio/cro-rundown-sdk
project_urls =
    Bug Tracker = https://github.com/czech-radio/cro-rundown-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
python_requires = >=3.10

install_requires =
    tqdm
    pandas
    pandera
    requests
    xlrd
    openpyxl
    tqdm
    pylev3
    loguru
    progress
    psycopg2
    loguru
    python-dotenv

package_dir =
    = src

packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-html
lint =
    black[jupyter]
    isort
    flake8
docs =
    sphinx
    jupyterlab

[options.entry_points]
console_scripts =
    cro.rundown.arrange=cro.rundown.sdk._arrange.__main__:main
    cro.rundown.cleanse=cro.rundown.sdk._cleanse.__main__:main
    cro.rundown.extract=cro.rundown.sdk._extract.__main__:main

[pycodestyle]
count = False
ignore = E226,E302,E41
max-line-length = 88
statistics = True

[tool:pytest]
minversion = 6.0
addopts = -ra -q --maxfail=2
testpaths = tests
console_output_style = progress
markers =
    domain: The domain layer tests
    service: The service layer tests

[tool:mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True

[tool:black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
# extend-exclude = '''
#     /(
#         | tests/data
#     )/
# '''

[tool.isort]
profile = "hug"
src_paths = ["src", "tests"]
